<resources>
    <string name="app_name">Zalando Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="link_to_your_file">Direct Link to your file</string>
    <string name="download">Download</string>
    <string name="open_file">Open File</string>
    <string name="string_input_for_the_problem">String input for the problem</string>
    <string name="solve_problem">Solve problem</string>
    <string name="paint_result">PAINT_RESULT</string>
    <string name="welcome_to_zalando_challenge_solver">Welcome to Zalando Challenge Solver</string>
    <string name="results">Results</string>
    <string name="or">or</string>
    <string name="please_specify_your_input">Please Specify Your Input:</string>
</resources>
