<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tv_header"
        android:text="@string/welcome_to_zalando_challenge_solver"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/zalando"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_choose_input"
        android:text="Please Specify Your Input"
        android:layout_marginStart="20dp"
        android:gravity="left"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_marginTop="20dp"
        android:textColor="@color/zalando"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:backgroundTint="@color/zalando"
        android:id="@+id/et_link_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/link_to_your_file"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av_loading"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/et_link_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_download"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_colorFilter="@color/zalando"
        app:lottie_rawRes="@raw/downloading_book"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <Button
        android:padding="8dp"
        android:id="@+id/btn_download"
        android:background="@drawable/round_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/av_loading"/>

    <View
        android:id="@+id/v_first_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/btn_download"
        app:layout_constraintBottom_toTopOf="@id/btn_open_file"/>

    <Button
        android:padding="8dp"
        android:background="@drawable/round_button"
        android:id="@+id/btn_open_file"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_download"/>

    <EditText
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="20dp"
        android:maxHeight="120dp"
        android:inputType="textMultiLine"
        android:backgroundTint="@color/zalando"
        android:id="@+id/et_text_input"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_input_for_the_problem"
        app:layout_constraintBottom_toTopOf="@id/btn_solve_challenge"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_file"/>

    <Button
        android:padding="8dp"
        android:background="@drawable/round_button"
        android:id="@+id/btn_solve_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve_problem"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>